--- a/InterfazGrafica/application/MenuPrincipal.fxml
+++ b/InterfazGrafica/application/MenuPrincipal.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MenuController">
    <children>
       <MenuBar AnchorPane.bottomAnchor="571.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
@@ -27,7 +27,7 @@
           </Menu>
         </menus>
       </MenuBar>
-      <Button layoutX="202.0" layoutY="190.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="169.0" text="JUGAR" textAlignment="CENTER" AnchorPane.bottomAnchor="356.0" AnchorPane.leftAnchor="202.0" AnchorPane.rightAnchor="229.0" AnchorPane.topAnchor="190.0" />
-      <Button layoutX="229.0" layoutY="335.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="115.0" text="SALIR" textAlignment="CENTER" AnchorPane.bottomAnchor="236.0" AnchorPane.leftAnchor="229.0" AnchorPane.rightAnchor="256.0" AnchorPane.topAnchor="335.0" />
+      <Button layoutX="202.0" layoutY="190.0" mnemonicParsing="false" onAction="#onActionJugar" prefHeight="54.0" prefWidth="169.0" text="JUGAR" textAlignment="CENTER" AnchorPane.bottomAnchor="356.0" AnchorPane.leftAnchor="202.0" AnchorPane.rightAnchor="229.0" AnchorPane.topAnchor="190.0" />
+      <Button layoutX="229.0" layoutY="335.0" mnemonicParsing="false" onAction="#onActionCerrar" prefHeight="29.0" prefWidth="115.0" text="SALIR" textAlignment="CENTER" AnchorPane.bottomAnchor="236.0" AnchorPane.leftAnchor="229.0" AnchorPane.rightAnchor="256.0" AnchorPane.topAnchor="335.0" />
    </children>
 </AnchorPane>
