--- a/InterfazGrafica/application/CombateAlgomon.fxml
+++ b/InterfazGrafica/application/CombateAlgomon.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,7 +11,6 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="569.0" prefWidth="647.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -65,9 +65,23 @@
          </children>
       </GridPane>
       <ButtonBar layoutX="23.0" layoutY="421.0" />
-      <Button layoutY="395.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="146.0" text="Button" />
-      <Button layoutY="421.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="146.0" text="Button" />
-      <Button layoutY="447.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="146.0" text="Button" />
-      <Button layoutX="149.0" layoutY="522.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="146.0" text="Button" />
+      <MenuButton layoutX="4.0" layoutY="417.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="163.0" text="Atacar">
+        <items>
+          <MenuItem mnemonicParsing="false" text="Action 1" />
+          <MenuItem mnemonicParsing="false" text="Action 2" />
+        </items>
+      </MenuButton>
+      <MenuButton layoutX="4.0" layoutY="454.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="163.0" text="Recibir Pocion">
+         <items>
+            <MenuItem mnemonicParsing="false" text="Action 1" />
+            <MenuItem mnemonicParsing="false" text="Action 2" />
+         </items>
+      </MenuButton>
+      <MenuButton layoutX="4.0" layoutY="489.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="163.0" text="Elegir algomon">
+         <items>
+            <MenuItem mnemonicParsing="false" text="Action 1" />
+            <MenuItem mnemonicParsing="false" text="Action 2" />
+         </items>
+      </MenuButton>
    </children>
 </AnchorPane>
